[package]
name = "clipdown"
version = "0.2.0"
authors = ["u7f8au7fbd <u7f8au7fbd@outlook.com>"]
edition = "2021"

[dependencies]
image = "*"
arboard = "*"
rdev = "*"
winrt-notification = "*"
serde = "*"
serde_json = "*"
toml = "*"
chrono = "*"
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
strip = true
[profile.release.package."*"]
opt-level = 3
[[bin]]
name = "clipdown"
path = "src/main.rs"
windows_subsystem = "windows"
